Replace template-haskell with raw-strings-qq dependency and introduce Grammar module for improved syntax handling. Update Main.hs to utilize the new Grammar content for file output.

--- a/package.yaml
+++ b/package.yaml
@@ -28,7 +28,7 @@ dependencies:
 - megaparsec
 - mtl
 - parser-combinators
-- template-haskell
+- raw-strings-qq
 - transformers
 - tree-view
 - unbound-generics
